--- a/app/views/financials/index.html.erb
+++ b/app/views/financials/index.html.erb
@@ -8,7 +8,7 @@
     <thead>
       <tr>
         <th>Name</th>
-        <th>Total Investments</th>
+        <th>Investments<span class="footnote">*</span></th>
         <th>Volume</th>
       </tr>
     </thead>
@@ -19,8 +19,13 @@
         <td class="currency"><%= format_mil(financial.investment_sum) %></td>
         <td><%= financial.investment_count %></td>
       </tr>
+      <% end %>
     </tbody>
-    <% end %>
+    <tfoot>
+      <tr>
+        <td colspan="3">* Total in millions</td>
+      </tr>
+    </tfoot>
   </table>
   <h3>Investors by Industry</h3>
   <h3>Investors by Round</h3>
