--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,36 +3,38 @@
 </div>
 <section id="banner_1">
   <div class="container">
-    <div class="prefix_1 grid_16 suffix_1 banner_text">
+    <div class="push_10 prefix_1 grid_12 suffix_1 banner_text">
       <h2>Providing the data you want without the clutter you don't.</h2>
       <p>A simple search engine for start-ups, investors and those who just want to know.</p>
       <p>&nbsp;</p>
     </div>
   </div>
 </section>
-<section class="container group">
-  <h3 class="center">Statistics On Everything:</h3>
-  <nav class="section_nav">
-    <a href=<%=individuals_url%>>
-      <img src="assets/wing.svg">
-      <h3><span class="bling">ANGEL INVESTORS</span></h3>
-    </a>
-    <a href=<%=companies_url%>>
-      <img src="assets/rocket.svg">
-      <h3><span class="bling">STARTUPS</span></h3>
-    </a>
-    <a href=<%=financials_url%>>
-      <img src="assets/us_map.svg">
-      <h3><span class="bling">GEOGRAPHIES</span></h3>
-    </a>
-  </nav>
-</section>
-<section id="banner_2">
+<div class="section_nav_wrap">
+  <section class="container">
+    <!-- <h3 class="center">Statistics On Everything:</h3> -->
+    <nav class="section_nav">
+      <a href=<%=individuals_url%>>
+        <img src="assets/wing.svg">
+        <h4>ANGEL INVESTORS</h4>
+      </a>
+      <a href=<%=companies_url%>>
+        <img src="assets/rocket.svg">
+        <h4>STARTUPS</h4>
+      </a>
+      <a href=<%=financials_url%>>
+        <img src="assets/us_map.svg">
+        <h4>GEOGRAPHIES</h4>
+      </a>
+    </nav>
+  </section>
+</div>
+<!-- <section id="banner_2">
   <div class="container">
     <div class="prefix_1 grid_16 suffix_1 banner_text">
-      <h2>Facebook Raising Big <span class="bling">MONEY</span></h2>
+      <h2>Facebook Raising Big MONEY</h2>
       <p>You can also put more stuff here. Fill in the blanks as you see fit. Let's make this box a little bigger because it looks nicer when its a bit bigger sneed to fill it in with some more text.</p>
       <a href="company_show.html">Learn More</a>
     </div>
   </div>
-</section>
+</section> -->
