--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -80,14 +80,15 @@ i, em{
 .left{
   float: left;
 }
-
 body{
   font-family: sans-serif;
 }
 .label{
   background: rgba(55,125,60,.3);
-  margin-bottom: 20px;
   text-transform: uppercase;
+}
+.section_nav_wrap{
+  background: linear-gradient(rgb(245,255,245), rgb(210,215,230));
 }
 /*----typograpgy----*/
 
@@ -129,6 +130,16 @@ header h1{
   position: relative;
   left: 20px;
 }
+.footnote{
+  color: #888;
+  font-family: serif;
+  font-size: 12px;
+  text-align: right;
+  vertical-align: super;
+}
+p .footnote{
+  margin-right: 80px;
+}
 /*----links----*/
 a{
   color: rgb(55,125,60);
@@ -159,48 +170,45 @@ dt{
   color: rgb(55,125,60);
   font-weight: 700;
 }
-.center{
-  text-align: center;
-}
-.map{
-  border: solid;
-}
-.under{
-  border-bottom: 2px dotted #bbb;
-  margin-bottom: 20px;
-  padding: 10px 0;
-}
 caption{
   font-family: 'Droid Sans', 'helvetica neue', helvetica, arial, sans-serif;
   font-size: 24px;
   padding: 15px;
   text-align: center;
 }
+.center{
+  text-align: center;
+}
+.col_head{
+  border-bottom: 2px solid #bbb;
+  color: #555;
+  display: block;
+  margin-bottom: 10px;
+  margin-top: 15px;
+  padding-bottom: 5px;
+  text-indent: 15px;
+}
+.currency{
+  padding-right: 30px;
+  text-align: right;
+}
+.map{
+  border: solid;
+}
+.search-icon {
+  height: 15px;
+}
 input,
 select{
-  font-size: 18px;
+  font-size: 16px;
   margin: 10px 0;
 }
-.section_nav{
-  padding-left: 50px;
-}
-.section_nav a{
-  border-radius: 3px;
-  color: #666;
-  display: inline-block;
-  margin: 20px 20px;
-  padding-bottom: 20px;
-  padding-top: 20px;
-  text-align: center;
-  text-decoration: none;
-  width: 230px;
-}
-.section_nav a:hover{
-  text-decoration: underline;
+.sortable th:hover{
+  background: #d9d9de;
 }
 table{
   border: 1px solid #999;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 th{
   background: #e9e9ee;
@@ -233,18 +241,16 @@ tfoot td{
   font-size: 12px;
   text-align: right;
 }
-.currency{
-  padding-right: 30px;
-  text-align: right;
+.under{
+  border-bottom: 1px solid #bbb;
+  margin-bottom: 20px;
+  padding: 10px 0;
 }
-.search-icon {
-  height: 15px;
+.widget_info p{
+  font-size: 14px;
+  line-height: 150%;
+  padding-top: 15px;
 }
-.sortable th:hover{
-  /*background: url('power.png');*/
-  background: #987;
-}
-
 /*----header----*/
 header{
   background: linear-gradient(rgb(245,255,245), rgb(190,195,220));
@@ -252,16 +258,18 @@ header{
   width: 100%;
 }
 #banner_1{
-  background: url('cranes.jpg') no-repeat 0 -400px;
-  background-position: center;
+  background: url('skyshot.jpg') no-repeat 0 -250px;
+  /*background-position: center;*/
   background-size: cover;
   height: 400px;
   width: 100%;
 }
 #banner_2{
-  background: url('bridge.jpg') no-repeat 0 -400px;
+  /*background: url('bridge.jpg') no-repeat 0 -400px;*/
+  background: linear-gradient(rgb(245,255,245), rgb(190,195,220));
   background-position: center;
   background-size: cover;
+  border-top: 1px solid #ccc;
   height: 400px;
   width: 100%;
 }
@@ -326,16 +334,29 @@ footer a{
   text-decoration: none;
 }
 footer a:hover{
-  color: rgb(55,60,125);
+  /*color: rgb(55,60,125);*/
+  color: #fff;
+  text-decoration: none;
+}
+.section_nav a{
+  color: rgb(55,125,60);
+  display: inline-block;
+  margin: 20px 0px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  text-align: center;
+  text-decoration: none;
+  width: 33%;
+}
+.section_nav a:hover{
+  color: rgba(55,125,60,.7);
 }
 /*----footer----*/
 footer{
   background-color: rgba(55,125,60,.8);
-  margin-top: 10px;
   padding-top: 20px;
   width: 100%;
 }
-
 footer li{
   padding: 5px 0;
 }
@@ -346,7 +367,7 @@ footer ul{
 .sub_footer{
   background-color: #ccc;
   color: #444;
-  padding: 20px;
+  padding: 15px;
   text-align: center;
 }
 .sub_footer p{
