--- a/app/views/financials/show.html.erb
+++ b/app/views/financials/show.html.erb
@@ -2,46 +2,75 @@
 <div class="label">
     <h3 class= "container"> <%= @financial.name %></h3>
 </div>
-<div class="cbw snap_nopreview"><div class="cbw_header"><script src="http://www.crunchbase.com/javascripts/widget.js" type="text/javascript"></script><div class="cbw_header_text"><a href="http://www.crunchbase.com/">CrunchBase Information</a></div></div><div class="cbw_content"><div class="cbw_subheader"><a href="http://www.crunchbase.com/financial-organization/<%= @financial.perma %>"><%= @financial.name %></a></div><div class="cbw_subcontent"><script src="http://www.crunchbase.com/cbw/financial-organization/<%= @financial.perma %>.js" type="text/javascript"></script></div><div class="cbw_footer">Information provided by <a href="http://www.crunchbase.com/">CrunchBase</a></div></div></div>
-
-<% company_array=[] %>
-<% fcode_array=[] %>
-<% industry_array=[] %>
-
-<h2>Recent Investments</h2>
-<table class= "sortable">
-  <tr>
-    <th>Company</th>
-    <th>Date</th>
-    <th>Round</th>
-    <th>Amount</th>
-    <th>Industry</th>
-    <th>City</th>
-  </tr>
-
-<% Funding.for_financial(@financial.id).order("funding_date DESC").limit(10).each do |f| %>
-  <tr>
-    <td><%= f.company.name %></td>
-    <td><%= f.funding_date %></td>
-    <td><%= f.funding_code %></td>
-    <td><%= f.funding_amount %></td>
-    <td><%= f.company.industry.name %></td>
-    <td><%= f.company.location.city %></td>
-  </tr>
-<% end %>
-</table>
-
-<h2>Industry Breakdown</h2>
-<p>Pie Chart of Invesment Dollars by Industry</p>
-<br>
-
-<h2>Round Breakdown</h2>
-<p>Breakdown by Round - table or pie chart</p>
-<br>
-
-<h2>Location Breakdown</h2>
-<p>Breakdown by top 10 locations invested - volume & dollars</p>
-<br>
-
-<%= render :partial => 'fundings/funding_show', locals: {fundings: Funding.for_financial(@financial.id)} %>
-
+<section class="container group">
+  <div class="grid_6 widget_info">
+    <h4 class="col_head">General Info</h4>
+    <p>&nbsp;</p>
+    <div class="cbw snap_nopreview">
+      <!-- <div class="cbw_header">
+        <script src="http://www.crunchbase.com/javascripts/widget.js" type="text/javascript"></script>
+        <div class="cbw_header_text">
+          <a href="http://www.crunchbase.com/">CrunchBase Information</a>
+        </div>
+      </div> -->
+      <div class="cbw_content">
+        <!-- <div class="cbw_subheader">
+          <a href="http://www.crunchbase.com/financial-organization/<%= @financial.perma %>"><%= @financial.name %></a>
+        </div> -->
+        <div class="cbw_subcontent">
+          <script src="http://www.crunchbase.com/cbw/financial-organization/<%= @financial.perma %>.js" type="text/javascript"></script>
+        </div>
+        <!-- <div class="cbw_footer">
+          Information provided by <a href="http://www.crunchbase.com/">CrunchBase</a>
+        </div> -->
+      </div>
+    </div>
+  </div>
+  <% company_array=[] %>
+  <% fcode_array=[] %>
+  <% industry_array=[] %>
+  <div class="grid_14">
+    <h4 class="col_head">Activity</h4>
+    <table class= "sortable">
+      <caption>Recent Investments</caption>
+      <thead>
+        <tr>
+          <th>Company</th>
+          <th>Date</th>
+          <th>Round</th>
+          <th>Amount</th>
+          <th>Industry</th>
+          <th>City</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% Funding.for_financial(@financial.id).order("funding_date DESC").limit(10).each do |f| %>
+        <tr>
+          <td><%= f.company.name %></td>
+          <td><%= f.funding_date %></td>
+          <td><%= f.funding_code %></td>
+          <td class="currency"><%= f.funding_amount %></td>
+          <td><%= f.company.industry.name %></td>
+          <td><%= f.company.location.city %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <h2>Industry Breakdown</h2>
+    <p>Pie Chart of Invesment Dollars by Industry</p>
+    <br>
+    
+    <h2>Round Breakdown</h2>
+    <p>Breakdown by Round - table or pie chart</p>
+    <br>
+    
+    <h2>Location Breakdown</h2>
+    <p>Breakdown by top 10 locations invested - volume & dollars</p>
+    <br>
+    
+    <%= render :partial => 'fundings/funding_show', locals: {fundings: Funding.for_financial(@financial.id)} %>
+  </div>
+  <div class="grid_4">
+    <h4 class="col_head">Sponsors</h4>
+  </div>
+</section>
