--- a/app/views/industries/show.html.erb
+++ b/app/views/industries/show.html.erb
@@ -2,29 +2,36 @@
     <h3 class= "container"> <%= @industry.name %></h1>
 </div>
 <p id="notice"><%= notice %></p>
-
-<% @industry.companies.each do |f| %>
-  <% if f.fundings.present?  %>
-        <table class= 'left', class= "sortable">
-        <tr><th colspan="3"><%= link_to f.name, f %></th></tr>
-        <tr>
-        <th>Funding Code</th>
-        <th>Funding Date</th>
-        <th>Funding Amount</th>
-        </tr>
-          <% f.fundings.each do |g|  %>
-          <% next unless g.funding_amount.present? %>
-          <tr>
-            <td><%= g.funding_code %></td>
-            <td><%= g.funding_date %></td>
-            <td><%= number_to_currency(g.funding_amount, unit: "$") %></td>
-          </tr>
-          <% end %>
-        </table>
+<section class="container group">
+  <% @industry.companies.each do |f| %>
+    <% if f.fundings.present?  %>
+          <table class= 'left', class= "sortable">
+            <thead>
+              <tr>
+                <th colspan="3"><%= link_to f.name, f %></th>
+              </tr>
+              <tr>
+                <th>Funding Code</th>
+                <th>Funding Date</th>
+                <th>Funding Amount</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% f.fundings.each do |g|  %>
+              <% next unless g.funding_amount.present? %>
+              <tr>
+                <td><%= g.funding_code %></td>
+                <td><%= g.funding_date %></td>
+                <td><%= number_to_currency(g.funding_amount, unit: "$") %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+    <% end  %>
   <% end  %>
-<% end  %>
-<div class="clearfix"></div>
-
-
- <%= link_to 'Edit', edit_industry_path(@industry) %> |
- <%= link_to 'Back', industries_path %>
+  <div class="clearfix"></div>
+</section>
+<section class="container group">
+  <%= link_to 'Edit', edit_industry_path(@industry) %> |
+  <%= link_to 'Back', industries_path %>
+ </section>
