cleaned up footnotes with table captions

--- a/app/views/fundings/index.html.erb
+++ b/app/views/fundings/index.html.erb
@@ -5,7 +5,7 @@
       <div class="grid_12">
         <p>To do: click on table row and take you to details for that table row </p>
         <table class="table table-hover sortable">
-          <caption>LTM<span class="footnote">*</span> Funding</caption>
+          <caption>Funding<span class="footnote">*</span></caption>
           <thead>
             <tr>
               <th>Quarter</th>
@@ -42,14 +42,14 @@
           </tbody>
           <tfoot>
             <tr>
-              <td colspan="4">*Last 12 Months *In Millions</td>
+              <td colspan="4">*Last 12 Months **In Millions</td>
             </tr>
           </tfoot>
         </table>
       </div>
       <div class="grid_12">
         <p>&nbsp;</p>
-        <h3 class="center">LTM<span class="footnote">*</span> Funding by Industry</h3>
+        <h3 class="center">Funding by Industry<span class="footnote">*</span></h3>
         <%= render "funding_donut" %>
       </div>
       <p>&nbsp;</p>
@@ -58,7 +58,7 @@
     <section class="container group">
       <div class="grid_12">
         <table class="table table-hover sortable">
-          <caption>LTM<span class="footnote">*</span> Funding by Round</caption>
+          <caption>Funding by Round<span class="footnote">*</span></caption>
           <thead>
             <tr>
               <th>Series</th>
@@ -149,7 +149,7 @@
         </table>
       </div>
       <div class="grid_12">
-        <h3 class="center">LTM<span class="footnote">*</span> Total Funding</h3>
+        <h3 class="center">Total Funding<span class="footnote">*</span></h3>
         <p>To Do: Format $ in Millions</p>
         <p>To Do: Format dates in 'Jun 2013' or Jun '13</p>
         <p>To Do: Need to recolor this to green</p>
