--- a/app/views/layouts/charts_layout.html.erb
+++ b/app/views/layouts/charts_layout.html.erb
@@ -16,7 +16,7 @@
 
         <header>
           <div class="container group">
-            <h1 class="grid_7">Simple<span class="bling">Fund</span></h1>
+            <h1 class="grid_8">Simple <span class="bling">Fund</span><span class="footnote">beta</span></h1>
             <nav class="home_nav">
               <ul>
                 <li><%= link_to "Home", root_url %></li>
