--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -27,7 +27,7 @@
 <section class="container group under">
   <div class="grid_12">
     <table class="table table-hover sortable">
-      <caption>LTM<span class="footnote">*</span> Funding</caption>
+      <caption>Funding<span class="footnote">*</span></caption>
       <thead>
         <tr>
           <th>Quarter</th>
@@ -77,7 +77,7 @@
 <section class="container group under">
   <div class="grid_12">
     <table class="table table-hover sortable">
-      <caption>LTM<span class="footnote">*</span> Funding by Round for: <%= params[:search].try(:titleize) %></caption>
+      <caption>Funding by Round for<span class="footnote">*</span>: <%= params[:search].try(:titleize) %></caption>
       <thead>
         <tr>
           <th>Series</th>
