--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -33,7 +33,7 @@
           <th>Quarter</th>
           <th>Amount ($ millions)</th>
           <th>Volume</th>
-          <th>Avg. Round Investment</th>
+          <th>Avg. Round Investment ($ millions)</th>
         </tr>
       </thead>
       <tbody>
@@ -174,7 +174,6 @@
 <section class="container group">
   <div class="grid_8">
 
-    <!-- links are still broken -->
 
     <% if params[:search].present? %>
     <table class="left">
